# shodancli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml
src/: config.rs  main.rs
src/handlers/: host.rs
src/structs/: host.rs
