[package]
name = "shodancli"
version = "0.1.0"
authors = ["Sergey Malinkin <malinkinsa@gmail.com>"]
edition = "2021"

[dependencies]
futures = "0.3.1"
clap = { version="4.2.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"